--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
     "sass": "^1.62.0",
     "typescript-plugin-css-modules": "^5.0.1"
   }
